Загрузка данных о пользователе из файла

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,10 @@
                             </tbody>
                         </table>
                     </div>
+                    <h5>Добавить пользователя на странице:</h5>
                     <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
+                    <h5>Добавить пользователя из файла:</h5>
+                    <p class="my-5"><a href="/uploadFile" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
                 </div>
             </div>
         </div>
