add button for find User

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,6 +50,8 @@
                     <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
                     <h5>Добавить пользователя из файла:</h5>
                     <p class="my-5"><a href="/uploadFile" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
+                    <h5>Поиск пользователей:</h5>
+                    <p class="my-5"><a href="/search" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
                 </div>
             </div>
         </div>
