--- a/src/main/resources/templates/info-user.html
+++ b/src/main/resources/templates/info-user.html
@@ -46,6 +46,7 @@
                                     <th>Age</th>
                                     <th>Salary</th>
                                     <th>Place Work</th>
+                                    <th>Data And Time</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -57,6 +58,7 @@
                                     <td th:text="${user.age}"></td>
                                     <td th:text="${user.salary}"></td>
                                     <td th:text="${user.placeWork}"></td>
+                                    <td th:text="${user.localDate}"></td>
                                 </tr>
                                 </tbody>
                             </table>
