--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
                                     <th>Place Work</th>
                                     <th>Edit</th>
                                     <th>Delete</th>
+                                    <th>Send Email</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -42,6 +43,7 @@
                                     <td th:text="${user.placeWork}"></td>
                                     <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
                                     <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                                    <td><a th:href="@{/simple-email/{user-email}(user-email=${user.email})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
                                 </tr>
                             </tbody>
                         </table>
